# SunWeb

./: Cargo.toml  README.md
example_app/: Cargo.toml
example_app/resources/cert/: cert.pem  key.pem
example_app/resources/static/: script.js  styles.css
example_app/resources/templates/: index.html  param_test.html  template_test.html
example_app/src/: main.rs
src/webserver/: mod.rs
src/webserver/client_handling/: mod.rs
src/webserver/http_packet/: mod.rs
src/webserver/requests/: mod.rs
sunweb/: Cargo.toml
sunweb/src/: lib.rs
sunweb_core/: Cargo.toml
sunweb_core/src/: lib.rs
sunweb_core/src/app/: mod.rs
sunweb_core/src/app/builder/: mod.rs
sunweb_core/src/app/client_handling/: mod.rs
sunweb_core/src/app/client_handling/h2/: hpack.rs  huffman.rs  mod.rs
sunweb_core/src/app/config/: mod.rs
sunweb_core/src/app/server/: dispatch.rs  mod.rs
sunweb_core/src/app/server/files/: mod.rs
sunweb_core/src/app/server/middleware/: mod.rs
sunweb_core/src/app/server/proxy/: mod.rs
sunweb_core/src/app/server/routes/: mod.rs
sunweb_core/src/http_packet/: mod.rs
sunweb_core/src/http_packet/body/: mod.rs
sunweb_core/src/http_packet/header/: connection.rs  http_method.rs  mod.rs
sunweb_core/src/http_packet/header/content_types/: application.rs  audio.rs  font.rs  image.rs  mod.rs  multipart.rs  text.rs  video.rs
sunweb_core/src/http_packet/header/headers/: cache_control.rs  content_encoding.rs  content_security_policy.rs  cookie.rs  frame_option.rs  mod.rs  referer_policy.rs  transfer_encoding.rs
sunweb_core/src/http_packet/requests/: mod.rs
sunweb_core/src/http_packet/responses/: mod.rs  status_code.rs
sunweb_core/src/http_packet/responses/response_types/: mod.rs
sunweb_core/src/logger/: mod.rs
sunweb_macros/: Cargo.toml
sunweb_macros/src/: lib.rs
sunweb_templating/: Cargo.toml
sunweb_templating/src/: lib.rs
