[package]
name = "sunweb"
version = "0.2.1"
edition = "2024"
authors = ["Sunnickel"]
categories = ["web-programming::http-server", "web-programming"]
description = "A small lightweight rust webframework."
homepage = "https://github.com/Sunnickel/SunWeb"
repository = "https://github.com/Sunnickel/SunWeb"
readme = "README.md"
license = "MIT"
keywords = ["web", "http", "server"]

[dependencies]
chrono = "0.4.42"
log = "0.4.28"
rustls = "0.23.32"
rustls-pki-types = "1.12.0"
rustls-native-certs = "0.8.1"
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.23.0"