[package]
name = "sunweb_core"
edition.workspace = true
version.workspace = true

[dependencies]
inventory.workspace = true
serde = "1.0.228"
serde_json = "1.0.149"
log = "0.4.29"
chrono = "0.4.42"
rustls = "0.23.32"
rustls-pki-types = "1.12.0"
rustls-native-certs = "0.8.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
futures = "0.3.32"