[package]
name = "sunweb_core"
description = "Core types and traits for the SunWeb framework."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
inventory.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log.workspace = true
chrono = "0.4"
rustls = "0.23"
rustls-pki-types = "1"
rustls-native-certs = "0.8"
tokio.workspace = true
tokio-rustls = "0.26"
futures = "0.3"